--- a/.gitignore
+++ b/.gitignore
@@ -305,4 +305,7 @@ pyrightconfig.json
 .history
 .ionide
 
+# MacOS
+.DS_Store
+
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,pycharm
